plugins {
    id 'application'
}

group = 'brokercraft'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.openjfx:javafx-controls:21.0.4:win"
    implementation "org.openjfx:javafx-fxml:21.0.4:win"
    implementation "org.openjfx:javafx-base:21.0.4:win"
    implementation "org.openjfx:javafx-graphics:21.0.4:win"
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'com.mysql:mysql-connector-j:8.3.0'
    compileOnly 'org.jetbrains:annotations:24.1.0'
}

application {
    mainClass = 'brokercraft.main.Main'
}

tasks.register('runServer', JavaExec) {
    group = 'application'
    description = 'Start BrokerCraft RMI server'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'brokercraft.main.ServerMain'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += [
        '--add-opens=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
        '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
    ]
}
